--- a/BOW_Models.ipynb
+++ b/BOW_Models.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -245,31 +245,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017-12-18 13:51:07,258 : INFO : adding document #0 to Dictionary(0 unique tokens: [])\n"
+      "2017-12-19 22:18:48,541 : INFO : adding document #0 to Dictionary(0 unique tokens: [])\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('12-18 13:51:07', 'Beginning to load dictionary.')\n"
+      "('12-19 22:18:48', 'Beginning to load dictionary.')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017-12-18 13:52:25,609 : INFO : built Dictionary(6856 unique tokens: [u'circuitri', u'nosepiec', u'orthogon', u'yellow', u'interchang']...) from 1001 documents (total 361998 corpus positions)\n",
-      "2017-12-18 13:52:25,619 : INFO : saving Dictionary object under /home/JeffreyHsu/patent_data/dictionary.dict, separately None\n",
-      "2017-12-18 13:52:25,625 : INFO : saved /home/JeffreyHsu/patent_data/dictionary.dict\n"
+      "2017-12-19 22:48:40,221 : INFO : built Dictionary(20768 unique tokens: [u'andresist', u'alkylgroup', u'nonsolv', u'circuitri', u'nosepiec']...) from 10000 documents (total 4049558 corpus positions)\n",
+      "2017-12-19 22:48:40,287 : INFO : saving Dictionary object under /home/JeffreyHsu/patent_data/dictionary.dict, separately None\n",
+      "2017-12-19 22:48:40,318 : INFO : saved /home/JeffreyHsu/patent_data/dictionary.dict\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('12-18 13:52:25', 'Dictionary loaded. Continue to filter tokens with extreme counts.')\n",
-      "('12-18 13:52:25', 'Dictionary saved.')\n"
+      "('12-19 22:48:40', 'Dictionary loaded. Continue to filter tokens with extreme counts.')\n",
+      "('12-19 22:48:40', 'Dictionary saved.')\n"
      ]
     }
    ],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -289,34 +289,43 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017-12-18 13:52:25,635 : INFO : loading Dictionary object from /home/JeffreyHsu/patent_data/dictionary.dict\n",
-      "2017-12-18 13:52:25,640 : INFO : loaded /home/JeffreyHsu/patent_data/dictionary.dict\n"
+      "2017-12-19 23:18:58,122 : INFO : loading Dictionary object from /home/JeffreyHsu/patent_data/dictionary.dict\n",
+      "2017-12-19 23:18:58,147 : INFO : loaded /home/JeffreyHsu/patent_data/dictionary.dict\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('12-18 13:52:25', 'Building corpus.')\n",
-      "('12-18 13:52:25', 'Corpus built. Converting to Market Matrix format.')\n"
+      "('12-19 23:18:58', 'Building corpus.')\n",
+      "('12-19 23:18:58', 'Corpus built. Converting to Market Matrix format.')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017-12-18 13:53:43,964 : INFO : storing corpus in Matrix Market format to /home/JeffreyHsu//patent_data/corpus.mm\n",
-      "2017-12-18 13:53:43,967 : INFO : saving sparse matrix to /home/JeffreyHsu//patent_data/corpus.mm\n",
-      "2017-12-18 13:53:43,969 : INFO : PROGRESS: saving document #0\n",
-      "2017-12-18 13:53:44,312 : INFO : saved 1000x6856 matrix, density=1.147% (78612/6856000)\n",
-      "2017-12-18 13:53:44,315 : INFO : saving MmCorpus index to /home/JeffreyHsu//patent_data/corpus.mm.index\n"
+      "2017-12-19 23:49:18,010 : INFO : storing corpus in Matrix Market format to /home/JeffreyHsu//patent_data/corpus.mm\n",
+      "2017-12-19 23:49:18,012 : INFO : saving sparse matrix to /home/JeffreyHsu//patent_data/corpus.mm\n",
+      "2017-12-19 23:49:18,014 : INFO : PROGRESS: saving document #0\n",
+      "2017-12-19 23:49:18,345 : INFO : PROGRESS: saving document #1000\n",
+      "2017-12-19 23:49:18,909 : INFO : PROGRESS: saving document #2000\n",
+      "2017-12-19 23:49:19,396 : INFO : PROGRESS: saving document #3000\n",
+      "2017-12-19 23:49:19,710 : INFO : PROGRESS: saving document #4000\n",
+      "2017-12-19 23:49:20,071 : INFO : PROGRESS: saving document #5000\n",
+      "2017-12-19 23:49:20,475 : INFO : PROGRESS: saving document #6000\n",
+      "2017-12-19 23:49:20,842 : INFO : PROGRESS: saving document #7000\n",
+      "2017-12-19 23:49:21,219 : INFO : PROGRESS: saving document #8000\n",
+      "2017-12-19 23:49:21,572 : INFO : PROGRESS: saving document #9000\n",
+      "2017-12-19 23:49:21,961 : INFO : saved 10000x20768 matrix, density=0.393% (815300/207680000)\n",
+      "2017-12-19 23:49:22,053 : INFO : saving MmCorpus index to /home/JeffreyHsu//patent_data/corpus.mm.index\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('12-18 13:53:44', 'Market Matrix format saved. Process finished.')\n"
+      "('12-19 23:49:22', 'Market Matrix format saved. Process finished.')\n"
      ]
     }
    ],
@@ -327,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -336,11 +345,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017-12-18 13:53:44,333 : INFO : loading Dictionary object from /home/JeffreyHsu/patent_data/dictionary.dict\n",
-      "2017-12-18 13:53:44,339 : INFO : loaded /home/JeffreyHsu/patent_data/dictionary.dict\n",
-      "2017-12-18 13:53:44,346 : INFO : loaded corpus index from /home/JeffreyHsu//patent_data/corpus.mm.index\n",
-      "2017-12-18 13:53:44,348 : INFO : initializing corpus reader from /home/JeffreyHsu//patent_data/corpus.mm\n",
-      "2017-12-18 13:53:44,350 : INFO : accepted corpus with 1000 documents, 6856 features, 78612 non-zero entries\n"
+      "2017-12-19 00:08:11,040 : INFO : loading Dictionary object from /home/JeffreyHsu/patent_data/dictionary.dict\n",
+      "2017-12-19 00:08:11,063 : INFO : loaded /home/JeffreyHsu/patent_data/dictionary.dict\n",
+      "2017-12-19 00:08:11,118 : INFO : loaded corpus index from /home/JeffreyHsu//patent_data/corpus.mm.index\n",
+      "2017-12-19 00:08:11,120 : INFO : initializing corpus reader from /home/JeffreyHsu//patent_data/corpus.mm\n",
+      "2017-12-19 00:08:11,137 : INFO : accepted corpus with 1000 documents, 6856 features, 78612 non-zero entries\n"
      ]
     },
     {
@@ -365,22 +374,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1283, 4723, 2927, -1]"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test words that is in dictionary\n",
     "dictionary.doc2idx(document=['human', 'andwith', 'experienc','technology'],\n",
@@ -388,52 +386,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TDIDF & LSI"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2017-12-18 14:31:01,186 : INFO : loaded corpus index from /home/JeffreyHsu//patent_data/corpus.mm.index\n",
-      "2017-12-18 14:31:01,189 : INFO : initializing corpus reader from /home/JeffreyHsu//patent_data/corpus.mm\n",
-      "2017-12-18 14:31:01,191 : INFO : accepted corpus with 1000 documents, 6856 features, 78612 non-zero entries\n",
-      "2017-12-18 14:31:01,193 : INFO : collecting document frequencies\n",
-      "2017-12-18 14:31:01,194 : INFO : PROGRESS: processing document #0\n",
-      "2017-12-18 14:31:01,544 : INFO : calculating IDF weights for 1000 documents and 6855 features (78612 matrix non-zeros)\n",
-      "2017-12-18 14:31:01,550 : INFO : storing corpus in Matrix Market format to /home/JeffreyHsu//patent_data/corpus_tfidf.mm\n",
-      "2017-12-18 14:31:01,552 : INFO : saving sparse matrix to /home/JeffreyHsu//patent_data/corpus_tfidf.mm\n",
-      "2017-12-18 14:31:01,554 : INFO : PROGRESS: saving document #0\n",
-      "2017-12-18 14:31:02,523 : INFO : saved 1000x6856 matrix, density=1.147% (78612/6856000)\n",
-      "2017-12-18 14:31:02,526 : INFO : saving MmCorpus index to /home/JeffreyHsu//patent_data/corpus_tfidf.mm.index\n",
-      "2017-12-18 14:31:02,530 : INFO : loaded corpus index from /home/JeffreyHsu//patent_data/corpus.mm.index\n",
-      "2017-12-18 14:31:02,532 : INFO : initializing corpus reader from /home/JeffreyHsu//patent_data/corpus.mm\n",
-      "2017-12-18 14:31:02,535 : INFO : accepted corpus with 1000 documents, 6856 features, 78612 non-zero entries\n",
-      "2017-12-18 14:31:02,537 : INFO : loading Dictionary object from /home/JeffreyHsu/patent_data/dictionary.dict\n",
-      "2017-12-18 14:31:02,545 : INFO : loaded /home/JeffreyHsu/patent_data/dictionary.dict\n",
-      "2017-12-18 14:31:02,549 : INFO : using serial LSI version on this node\n",
-      "2017-12-18 14:31:02,551 : INFO : updating model with new documents\n",
-      "2017-12-18 14:31:02,864 : INFO : preparing a new chunk of documents\n",
-      "2017-12-18 14:31:02,886 : INFO : using 100 extra samples and 2 power iterations\n",
-      "2017-12-18 14:31:02,888 : INFO : 1st phase: constructing (6856, 102) action matrix\n",
-      "2017-12-18 14:31:02,946 : INFO : orthonormalizing (6856, 102) action matrix\n",
-      "2017-12-18 14:31:04,163 : INFO : 2nd phase: running dense svd on (102, 1000) matrix\n",
-      "2017-12-18 14:31:04,405 : INFO : computing the final decomposition\n",
-      "2017-12-18 14:31:04,407 : INFO : keeping 2 factors (discarding 43.447% of energy spectrum)\n",
-      "2017-12-18 14:31:04,487 : INFO : processed documents up to #1000\n",
-      "2017-12-18 14:31:04,571 : INFO : topic #0(1994.877): 0.898*\"said\" + 0.255*\"mean\" + 0.109*\"claim\" + 0.092*\"first\" + 0.083*\"member\" + 0.078*\"second\" + 0.076*\"wherein\" + 0.065*\"end\" + 0.062*\"portion\" + 0.060*\"posit\"\n",
-      "2017-12-18 14:31:04,574 : INFO : topic #1(665.915): 0.616*\"sub\" + 0.320*\"mean\" + -0.218*\"said\" + 0.193*\"first\" + 0.189*\"second\" + 0.187*\"beam\" + 0.169*\"claim\" + 0.138*\"fring\" + 0.136*\"wherein\" + 0.132*\"signal\"\n",
-      "2017-12-18 14:31:04,582 : INFO : storing corpus in Matrix Market format to /home/JeffreyHsu//patent_data/corpus_lsi.mm\n",
-      "2017-12-18 14:31:04,585 : INFO : saving sparse matrix to /home/JeffreyHsu//patent_data/corpus_lsi.mm\n",
-      "2017-12-18 14:31:04,801 : INFO : PROGRESS: saving document #0\n",
-      "2017-12-18 14:31:04,976 : INFO : saved 1000x2 matrix, density=99.900% (1998/2000)\n",
-      "2017-12-18 14:31:04,979 : INFO : saving MmCorpus index to /home/JeffreyHsu//patent_data/corpus_lsi.mm.index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reload(csv2bow)\n",
     "\n",
@@ -448,14 +413,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2017-12-19 00:23:50,601 : INFO : loaded corpus index from /home/JeffreyHsu//patent_data/corpus_tfidf.mm.index\n",
+      "2017-12-19 00:23:50,602 : INFO : initializing corpus reader from /home/JeffreyHsu//patent_data/corpus_tfidf.mm\n",
+      "2017-12-19 00:23:50,604 : INFO : accepted corpus with 1000 documents, 6856 features, 78612 non-zero entries\n",
+      "2017-12-19 00:23:50,605 : INFO : loaded corpus index from /home/JeffreyHsu//patent_data/corpus_lsi.mm.index\n",
+      "2017-12-19 00:23:50,607 : INFO : initializing corpus reader from /home/JeffreyHsu//patent_data/corpus_lsi.mm\n",
+      "2017-12-19 00:23:50,608 : INFO : accepted corpus with 1000 documents, 10 features, 9990 non-zero entries\n"
+     ]
+    }
+   ],
+   "source": [
+    "tfidf_corpus = corpora.MmCorpus(tfidf_corpus_path)\n",
+    "lsi_corpus = corpora.MmCorpus(lsi_corpus_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[(0, 0.00871934698902), (1, 0.0256948405878), (2, 0.0303665774738), (3, 0.0162975887522), (4, 0.0128052143836), (5, 0.0162975887522), (6, 0.0480938376486), (7, 0.103008886012), (8, 0.000674533102371), (9, 0.0069547606165), (10, 0.0280432550012), (11, 0.0113587532882), (12, 0.0310022979518), (13, 0.572931821782), (14, 0.202333821193), (15, 0.252917276491), (16, 0.064774433051), (17, 0.222607611633), (18, 0.0116619636233), (19, 0.168611517661), (20, 0.0267253749331), (21, 0.00382655925778), (22, 0.0264490136383), (23, 0.0131058955453), (24, 0.0186805610465), (25, 0.0910154857104), (26, 0.00744068176531), (27, 0.011785439323), (28, 0.65401432179), (29, 0.0895100078834), (30, 0.0187594878167), (31, 0.015168788772), (32, 0.0095878618722), (33, 0.0971616495765), (34, 0.00867132907813), (35, 0.0313419054742), (36, 0.0505834552982), (37, 0.0133284873086), (38, 0.00202891578597), (39, 0.0850772828231)]\n",
+      "[(2, 0.016370287372), (4, 0.0207094500031), (8, 0.00218180018554), (9, 0.00449908179454), (12, 0.0250694959171), (21, 0.0061885678177), (30, 0.0101130332115), (32, 0.0775306606088), (38, 0.00656259688771), (40, 0.0529354354651), (41, 0.0357170214568), (42, 0.0299116210247), (43, 0.0243454765895), (44, 0.0290551441318), (45, 0.530039914706), (46, 0.0320117468129), (47, 0.0205741025979), (48, 0.0407630405475), (49, 0.0562504766477), (50, 0.0314930024688), (51, 0.391774580212), (52, 0.0818069504425), (53, 0.0271366132913), (54, 0.0345031218776), (55, 0.081526081095), (56, 0.0605875568502), (57, 0.0275082394778), (58, 0.0090937156794), (59, 0.0441699928922), (60, 0.0441699928922), (61, 0.179806054566), (62, 0.185316739931), (63, 0.309189950245), (64, 0.0238029648339), (65, 0.0497361373274), (66, 0.0352432475181), (67, 0.0305190756641), (68, 0.136542560051), (69, 0.0230331276412), (70, 0.0241323992518), (71, 0.0205741025979), (72, 0.0156828931502), (73, 0.326946932423), (74, 0.0180396189477), (75, 0.0771517380893), (76, 0.0355166659823), (77, 0.404425631765), (78, 0.0264677177325), (79, 0.01595308211), (80, 0.020641582946), (81, 0.0610381513281), (82, 0.0929880904513), (83, 0.0132016281585), (84, 0.0337200616164), (85, 0.0329302510704), (86, 0.0305190756641), (87, 0.101160184849), (88, 0.0818069504425), (89, 0.125493497881), (90, 0.0482538591314), (91, 0.0432581041678), (92, 0.0285167437351)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, doc in enumerate(tfidf_corpus):\n",
+    "    if i < 3: \n",
+    "        print doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.0868057111\n",
+      "76.759197355\n",
+      "965.697212812\n",
+      "0.736291305102\n"
+     ]
+    }
+   ],
+   "source": [
+    "reload(csv2bow)\n",
+    "print csv2bow.doc_cosine(lsi_corpus[183], lsi_corpus[6])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "tfidf_corpus = corpora.MmCorpus(tfidf_corpus_path)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
